auth: user profile 2fa value alignment
https://gitlab.flab.cesnet.cz/bodik/sner4/-/issues/252

--- a/sner/server/static/sner/sner.css
+++ b/sner/server/static/sner/sner.css
@@ -62,3 +62,9 @@ td.abutton_annotate_dt:hover, td.abutton_annotate_view:hover, td.service_endpoin
 .filter_bar {
 	margin-top: .3rem;
 }
+
+table.auth-user-profile th {
+	font-weight: bold;
+	text-align: right;
+	vertical-align: middle;
+}
