--- a/sner/server/templates/auth/user/list.html
+++ b/sner/server/templates/auth/user/list.html
@@ -34,11 +34,11 @@
 {% endblock %}
 
 {% block content %}
-{% call cm.heading(['Users']) %}{% endcall %}
-
-<div class="text-right">
-	<a class="btn btn-outline-primary" href="{{ url_for('auth.user_add_route') }}">Add</a>
-</div>
+{% call cm.heading(['Users']) %}
+	<div class="pl-2">
+		<a class="btn btn-outline-primary" href="{{ url_for('auth.user_add_route') }}">Add</a>
+	</div>
+{% endcall %}
 
 <table id="user_list_table" class="table table-hover table-sm" width="100%"></table>
 {% endblock %}
