server: auth, drop password and apikey hashing setter from user model (user.password)
https://gitlab.flab.cesnet.cz/bodik/sner4/-/issues/254

--- a/sner/server/templates/auth/user/addedit.html
+++ b/sner/server/templates/auth/user/addedit.html
@@ -21,10 +21,10 @@ ul.multiple_checkbox_field li { list-style-type: none; }
 <form method="post">
 	{{ form.csrf_token }}
 	{{ bwtf.bootstrap_field(form.username, horizontal=True) }}
-	{{ bwtf.bootstrap_field(form.password, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.email, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.roles, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.active, horizontal=True) }}
+	{{ bwtf.bootstrap_field(form.new_password, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.submit, horizontal=True) }}
 </form>
 {% endblock %}
