--- a/sner/server/templates/scheduler/queue/addedit.html
+++ b/sner/server/templates/scheduler/queue/addedit.html
@@ -13,6 +13,7 @@
 	{{ bwtf.bootstrap_field(form.group_size, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.priority, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.active, horizontal=True) }}
+	{{ bwtf.bootstrap_field(form.reqs, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.submit, horizontal=True) }}
 </form>
 {% endblock %}
