--- a/sner/server/templates/auth/login.html
+++ b/sner/server/templates/auth/login.html
@@ -11,5 +11,10 @@
 	{{ bwtf.bootstrap_field(form.username, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.password, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.submit, horizontal=True) }}
+	{% if oauth_enabled %}
+	<div class="form-group row"><div class="col-sm-10 offset-sm-2">
+		<a class="btn btn-primary" href="{{ url_for('auth.login_oidc_route') }}">OIDC</a>
+	</div></div>
+	{% endif %}
 </form>
 {% endblock %}
