api: limit public api by list of allowed hosts/objects to query per user (basic implementation)

--- a/sner/server/templates/auth/profile/index.html
+++ b/sner/server/templates/auth/profile/index.html
@@ -69,7 +69,10 @@
 			{% if new_apikey %}<div class="alert alert-warning">new apikey {{ new_apikey }}</div>{% endif %}
 		</td>
 	</tr>
-
+	<tr>
+		<th>api_networks</th>
+		<td>{{ user.api_networks }}</td>
+	</tr>
 </table>
 
 {% endblock %}
