--- a/sner/server/templates/auth/user/addedit.html
+++ b/sner/server/templates/auth/user/addedit.html
@@ -25,6 +25,7 @@ ul.multiple_checkbox_field li { list-style-type: none; }
 	{{ bwtf.bootstrap_field(form.roles, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.active, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.new_password, horizontal=True) }}
+	{{ bwtf.bootstrap_field(form.api_networks, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.submit, horizontal=True) }}
 </form>
 {% endblock %}
