--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -7,6 +7,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="sner version {{ sner_version }}"/>
 	<meta name="csrf-token" content="{{ csrf_token() }}">
 	<title>{% block title %}{% endblock %} - sner4</title>
 
