server: ui add quickjump

--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -100,6 +100,8 @@
 			{% endif %}
 			</ul>
 
+			<form id="storage_quickjump_form" class="form-inline" style="display:inline;" method="post"><input type="text" name="quickjump" placeholder="Quick jump"></form>
+
 			<ul class="navbar-nav">
 			{% if config['DEBUG'] %}
 				<li><span class="nav-link text-warning">debug enabled</span></li>
