--- a/sner/server/templates/auth/profile/changepassword.html
+++ b/sner/server/templates/auth/profile/changepassword.html
@@ -6,7 +6,7 @@
 {% block content %}
 {% call cm.heading(['User profile', 'Change password']) %}{% endcall %}
 
-<form method="post">
+<form id="user_change_password_form" method="post">
 	{{ form.csrf_token }}
 	{{ bwtf.bootstrap_field(form.current_password, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.password1, horizontal=True) }}
