--- a/sner/server/templates/auth/login_totp.html
+++ b/sner/server/templates/auth/login_totp.html
@@ -6,7 +6,7 @@
 {% block content %}
 {% call cm.heading(['Login with 2FA']) %}{% endcall %}
 
-<form method="post">
+<form id="totp_code_form" method="post">
 	{{ form.csrf_token }}
 	{{ bwtf.bootstrap_field(form.code, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.submit, horizontal=True) }}
