--- a/sner/server/templates/auth/profile/webauthn_edit.html
+++ b/sner/server/templates/auth/profile/webauthn_edit.html
@@ -6,7 +6,7 @@
 {% block content %}
 {% call cm.heading(['User profile', 'Edit WebAuthn credential']) %}{% endcall %}
 
-<form method="post">
+<form id="webauthn_edit_form" method="post">
 	{{ form.csrf_token }}
 	{{ bwtf.bootstrap_field(form.name, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.submit, horizontal=True) }}
