--- a/sner/server/templates/scheduler/excl/addedit.html
+++ b/sner/server/templates/scheduler/excl/addedit.html
@@ -6,7 +6,7 @@
 {% block content %}
 {% call cm.heading(['Exclusions', 'Add or edit']) %}{% endcall %}
 
-<form method="post">
+<form id="excl_form" method="post">
 	{{ form.csrf_token }}
 	{{ bwtf.bootstrap_field(form.family, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.value, horizontal=True) }}
