--- a/sner/server/templates/scheduler/excl/import.html
+++ b/sner/server/templates/scheduler/excl/import.html
@@ -6,7 +6,7 @@
 {% block content %}
 {% call cm.heading(['Exclusions', 'Import']) %}{% endcall %}
 
-<form method="post">
+<form id="excl_import_form" method="post">
 	{{ form.csrf_token }}
 	{{ bwtf.bootstrap_field(form.data, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.replace, horizontal=True) }}
