--- a/sner/server/templates/storage/host/addedit.html
+++ b/sner/server/templates/storage/host/addedit.html
@@ -6,7 +6,7 @@
 {% block content %}
 {% call cm.heading(['Hosts', 'Add or edit']) %}{% endcall %}
 
-<form method="post">
+<form id="host_form" method="post">
 	{{ form.csrf_token }}
 	{{ form.return_url }}
 	{{ bwtf.bootstrap_field(form.address, horizontal=True) }}
