--- a/sner/server/templates/auth/user/list.html
+++ b/sner/server/templates/auth/user/list.html
@@ -7,7 +7,7 @@
 <script type="text/javascript">
 	function action_userapikey(event) {
 		Sner.submit_form(event.target.closest('a').getAttribute('data-url'))
-			.done(function(data, textStatus, jqXHR) { Sner.modal(data.title, data.detail); })
+			.done(function(data, textStatus, jqXHR) { Sner.modal(data.message, data.detail); })
 			.always(function() { event.data.dt.draw(); });
 	}
 
