--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -41,6 +41,9 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='highlight/default.min.css') }}" />
 	<script type="text/javascript" src="{{ url_for('static', filename='highlight/highlight.min.js') }}"></script>
 
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='jquery-ui/jquery-ui.min.css') }}" />
+	<script type="text/javascript" src="{{ url_for('static', filename='jquery-ui/jquery-ui.min.js') }}"></script>
+
 	{{ JSGlue.include() }}
 
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='sner/sner.css') }}" />
@@ -100,7 +103,11 @@
 			{% endif %}
 			</ul>
 
-			<form id="storage_quickjump_form" class="form-inline" style="display:inline;" method="post"><input type="text" name="quickjump" placeholder="Quick jump"></form>
+			{% if current_user.is_authenticated and current_user.has_role('operator') %}
+			<form id="storage_quickjump_form" class="form-inline" style="display:inline;" method="post">
+				<input class="form-control form-control-sm" type="text" name="quickjump" placeholder="Quick jump" title='Quick jump with address, hostname or port'>
+			</form>
+			{% endif %}
 
 			<ul class="navbar-nav">
 			{% if config['DEBUG'] %}
