server: add via_target to Vuln and Note edit forms, also use the field for reporting

--- a/sner/server/templates/storage/vuln/addedit.html
+++ b/sner/server/templates/storage/vuln/addedit.html
@@ -16,6 +16,7 @@
 	<div class="collapse" id="refs_collapse">
 		{{ bwtf.bootstrap_field(form.host_id, horizontal=True) }}
 		{{ bwtf.bootstrap_field(form.service_id, horizontal=True) }}
+		{{ bwtf.bootstrap_field(form.via_target, horizontal=True) }}
 	</div>
 	{{ bwtf.bootstrap_field(form.name, horizontal=True) }}
 	{{ bwtf.bootstrap_field(form.xtype, horizontal=True) }}
