server: webui add moredata dropdowns for all storage objects (lists and views)

--- a/sner/server/templates/auth/user/list.html
+++ b/sner/server/templates/auth/user/list.html
@@ -35,7 +35,7 @@
 
 {% block content %}
 {% call cm.heading(['Users']) %}
-	<div class="pl-2">
+	<div class="breadcrumb-buttons pl-2">
 		<a class="btn btn-outline-primary" href="{{ url_for('auth.user_add_route') }}">Add</a>
 	</div>
 {% endcall %}
