--- a/sner/server/templates/scheduler/excl/list.html
+++ b/sner/server/templates/scheduler/excl/list.html
@@ -23,7 +23,7 @@
 
 {% block content %}
 {% call cm.heading(['Exclusions']) %}
-	<div class="pl-2">
+	<div class="breadcrumb-buttons pl-2">
 		<a class="btn btn-outline-primary" href="{{ url_for('scheduler.excl_add_route') }}">Add</a>
 		<a class="btn btn-outline-primary" href="{{ url_for('scheduler.excl_import_route') }}">Import</a>
 		<a class="btn btn-outline-primary" href="{{ url_for('scheduler.excl_export_route') }}">Export</a>
