--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -32,7 +32,7 @@
 
 {% block content %}
 {% call cm.heading(['Hosts']) %}
-	<div class="pl-2">
+	<div class="breadcrumb-buttons pl-2">
 		<a class="btn btn-outline-primary" href="{{ url_for('storage.host_add_route') }}">Add</a>
 		<a class="btn btn-outline-secondary" data-toggle="collapse" href="#filter_form"><i class="fas fa-filter"></i></a>
 	</div>
