--- a/sner/server/templates/visuals/dnstree.html
+++ b/sner/server/templates/visuals/dnstree.html
@@ -24,7 +24,7 @@ svg {
 
 {% block content %}
 {% call cm.heading(['Visuals', 'DNS Tree']) %}
-	<div class="pl-2">
+	<div class="breadcrumb-buttons pl-2">
 		<a class="btn btn-outline-secondary" data-toggle="collapse" href="#filter_form"><i class="fas fa-filter"></i></a>
 	</div>
 {% endcall %}
