--- a/sner/server/templates/scheduler/queue/list.html
+++ b/sner/server/templates/scheduler/queue/list.html
@@ -35,7 +35,7 @@
 
 {% block content %}
 {% call cm.heading(['Queues']) %}
-	<div class="pl-2">
+	<div class="breadcrumb-buttons pl-2">
 		<a class="btn btn-outline-primary" href="{{ url_for('scheduler.queue_add_route') }}">Add</a>
 		<a class="btn btn-outline-primary" href="{{ url_for('visuals.plannertree_route') }}">Planner tree</a>
 	</div>
