--- a/sner/server/templates/storage/service/grouped.html
+++ b/sner/server/templates/storage/service/grouped.html
@@ -21,7 +21,7 @@
 
 {% block content %}
 {% call cm.heading(['Services', 'Grouped']) %}
-	<div class="pl-2">
+	<div class="breadcrumb-buttons pl-2">
 		<a class="btn btn-outline-secondary" data-toggle="collapse" href="#filter_form"><i class="fas fa-filter"></i></a>
 	</div>
 {% endcall %}
