--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -50,7 +50,7 @@
 
 {% block content %}
 {% call cm.heading(['Vulns']) %}
-	<div class="pl-2">
+	<div class="breadcrumb-buttons pl-2">
 		<a class="btn btn-outline-primary" href="{{ url_for('storage.vuln_report_route', filter=request.values.filter or None) }}">Report</a>
 		<a class="btn btn-outline-primary" href="{{ url_for('storage.vuln_report_route', filter=request.values.filter or None, group_by_host=True) }}">Report by host</a>
 		<a class="btn btn-outline-primary" href="{{ url_for('storage.vuln_export_route', filter=request.values.filter or None) }}">Export</a>
