--- a/sner/server/templates/visuals/portmap.html
+++ b/sner/server/templates/visuals/portmap.html
@@ -42,7 +42,7 @@ table.borderless tbody tr td { border: none; }
 
 {% block content %}
 {% call cm.heading(['Visuals', 'Portmap']) %}
-	<div class="pl-2">
+	<div class="breadcrumb-buttons pl-2">
 		<a class="btn btn-outline-secondary" data-toggle="collapse" href="#filter_form"><i class="fas fa-filter"></i></a>
 	</div>
 {% endcall %}
